# file_splitter

./: CMakeLists.txt  README.md  compability.h  iocontrol.c  iocontrol.h  main.c  number.c  number.h  random_phone_generator.c  split_file.c  test_guess.c  test_guess2.c
